--- a/pages/credito.html
+++ b/pages/credito.html
@@ -20,6 +20,9 @@
             <div class="p-0 flex-row-reverse collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="fs-4 nav-item">
+                  <a class="text-white nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="fs-4 nav-item">
                   <a class="text-white nav-link" href="./inventario.html">Inventario</a>
                 </li>
                 <li class="fs-4 nav-item">
