--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -20,6 +20,9 @@
             <div class="p-0 flex-row-reverse collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="fs-4 nav-item">
+                  <a class="text-white nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="fs-4 nav-item">
                   <a class="text-white nav-link" href="./inventario.html">Inventario</a>
                 </li>
                 <li class="fs-4 nav-item">
@@ -37,7 +40,7 @@
     </nav>
 
     <h1 class="text-center m-4">Nuestros clientes nos recomiendan <br> Mira un testimonio de uno de nuestros clientes</h1>
-    <iframe class="d-flex justify-content-center" width="50%" height="600px" src="https://www.youtube.com/embed/x5ZmjuUxv0I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="mx-auto" width="50%" height="600px" src="https://www.youtube.com/embed/x5ZmjuUxv0I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
