--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <a class="text-white nav-link" href="./index.html">Inicio</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pagina_de_autos/pages/inventario.html">Inventario</a>
+                <a class="text-white nav-link" href="../pages/inventario.html">Inventario</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pagina_de_autos/pages/localidades.html">Localidades</a>
+                <a class="text-white nav-link" href="../pages/localidades.html">Localidades</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pagina_de_autos/pages/credito.html">Crédito</a>
+                <a class="text-white nav-link" href="../pages/credito.html">Crédito</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pagina_de_autos/pages/referencias.html">Referencias</a>
+                <a class="text-white nav-link" href="../pages/referencias.html">Referencias</a>
               </li>
             </ul>
           </div>
