--- a/pages/credito.html
+++ b/pages/credito.html
@@ -11,33 +11,33 @@
 </head>
 
 <body>
-    <nav class="p-0 m-0 navbar navbar-expand-lg bg-light">
-        <div class="bg-success.bg-gradient p-3 mb-2 bg-success text-white container-fluid">
-              <a class="fs-2 fw-bold fst-italic text-white navbar-brand" href="../index.html"> Baherma Automotriz</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="p-0 flex-row-reverse collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="fs-4 nav-item">
-                  <a class="text-white nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="fs-4 nav-item">
-                  <a class="text-white nav-link" href="./inventario.html">Inventario</a>
-                </li>
-                <li class="fs-4 nav-item">
-                  <a class="text-white nav-link" href="./localidades.html">Localidades</a>
-                </li>
-                <li class="fs-4 nav-item">
-                  <a class="text-white nav-link" href="./credito.html">Crédito</a>
-                </li>
-                <li class="fs-4 nav-item">
-                  <a class="text-white nav-link" href="./referencias.html">Referencias</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-    </nav>
+<nav class="p-0 m-0 navbar navbar-expand-lg bg-light">
+    <div class="bg-success.bg-gradient p-3 mb-2 bg-success text-white container-fluid">
+          <a class="fs-2 fw-bold fst-italic text-white navbar-brand" href="../index.html"> Baherma Automotriz</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="p-0 flex-row-reverse collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="fs-4 nav-item">
+              <a class="text-white nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="fs-4 nav-item">
+              <a class="text-white nav-link" href="inventario.html">Inventario</a>
+            </li>
+            <li class="fs-4 nav-item">
+              <a class="text-white nav-link" href="localidades.html">Localidades</a>
+            </li>
+            <li class="fs-4 nav-item">
+              <a class="text-white nav-link" href="credito.html">Crédito</a>
+            </li>
+            <li class="fs-4 nav-item">
+              <a class="text-white nav-link" href="referencias.html">Referencias</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+</nav>
 
     <img src="../img/vendedor.jpg" class="mb-3 img-fluid" alt="vendedor">
 
