--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
           <div class="p-0 flex-row-reverse collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="./index.html">Inicio</a>
+                <a class="text-white nav-link" href="index.html">Inicio</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pages/inventario.html">Inventario</a>
+                <a class="text-white nav-link" href="./pages/inventario.html">Inventario</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pages/localidades.html">Localidades</a>
+                <a class="text-white nav-link" href="./pages/localidades.html">Localidades</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pages/credito.html">Crédito</a>
+                <a class="text-white nav-link" href="./pages/credito.html">Crédito</a>
               </li>
               <li class="fs-4 nav-item">
-                <a class="text-white nav-link" href="../pages/referencias.html">Referencias</a>
+                <a class="text-white nav-link" href="./pages/referencias.html">Referencias</a>
               </li>
             </ul>
           </div>
